--- a/app/templates/_speech_log_modal.html
+++ b/app/templates/_speech_log_modal.html
@@ -1,7 +1,7 @@
 <div id="speechLogModal" class="modal">
     <div class="modal-content">
         <span class="close" onclick="closeSpeechLogModal()">&times;</span>
-        <h1 id="speechLogModalTitle">Project Details</h1>
+        <h2 id="speechLogModalTitle">Project Details</h2>
         <form id="speechLogForm">
             <input type="hidden" id="log_id" name="log_id">
             <table class="form-table">
@@ -22,7 +22,7 @@
                 </tr>
             </table>
             <div class="form-actions">
-                <button type="button" class="btn btn-primary" onclick="saveProjectDetails()">Save</button>
+                <button type="button" class="btn btn-success" onclick="saveProjectDetails()">Save</button>
                 <button type="button" class="btn btn-danger" onclick="closeSpeechLogModal()">Cancel</button>
             </div>
         </form>
