--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -135,7 +135,7 @@
         <button id="cancel-edit-btn" class="btn btn-danger">Cancel</button>
         <button id="view-details-btn" class="btn btn-success">View Details</button>
         <button id="add-row-btn" class="btn btn-info">Add Section</button>
-        <button id="edit-logs-btn" class="btn btn-primary">Save</button>
+        <button id="edit-logs-btn" class="btn btn-success">Save</button>
     </div>
     {% endif %}
 
