--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -195,7 +195,7 @@
           Reset to "toastmasters"
       </button>
       {% endif %}
-      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="submit" class="btn btn-success">Save</button>
     </div>
   </form>
 </div>
