--- a/app/static/css/pages/agenda/agenda-mobile.css
+++ b/app/static/css/pages/agenda/agenda-mobile.css
@@ -64,7 +64,8 @@
 
 	.meeting-title {
 		grid-row: 3;
-		margin: 10px 0 0 0;
+		margin-top: 10px;
+		margin-bottom: 10px;
 		text-align: center;
 	}
 
