--- a/app/static/css/pages/voting/voting-base.css
+++ b/app/static/css/pages/voting/voting-base.css
@@ -181,6 +181,7 @@
 	border-radius: 8px;
 	margin-top: 20px;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+	background-color: white;
 }
 
 .rating-question {
