--- a/app/templates/_contact_modal.html
+++ b/app/templates/_contact_modal.html
@@ -1,7 +1,7 @@
 <div id="contactModal" class="modal">
   <div class="modal-content">
     <span class="close" onclick="closeContactModal()">&times;</span>
-    <h1 id="contactModalTitle"></h1>
+    <h2 id="contactModalTitle"></h2>
      <form id="contactForm" method="POST" enctype="multipart/form-data">
        <div class="profile-avatar-container" style="margin-top: 10px;">
         <div id="modal-avatar-placeholder" class="avatar-placeholder">
@@ -115,7 +115,7 @@
       </div>
 
       <div class="form-actions">
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-success">Save</button>
       </div>
     </form>
   </div>
