--- a/app/templates/_speech_edit_modal.html
+++ b/app/templates/_speech_edit_modal.html
@@ -1,7 +1,7 @@
 <div id="speechEditModal" class="modal">
   <div class="modal-content">
     <span class="close" onclick="closeSpeechEditModal()">&times;</span>
-    <h1>Edit Speech Details</h1>
+    <h2>Edit Speech Details</h2>
 
     <form id="speechEditForm" onsubmit="saveSpeechChanges(event)">
       <input type="hidden" id="edit-log-id" name="log_id" />
@@ -79,7 +79,7 @@
       </div>
 
       <div class="form-actions">
-        <button type="submit" class="btn btn-primary">Save Changes</button>
+        <button type="submit" class="btn btn-success">Save Changes</button>
         <button type="button" class="btn btn-danger" onclick="closeSpeechEditModal()">Cancel</button>
       </div>
     </form>
