--- a/app/templates/role_modal.html
+++ b/app/templates/role_modal.html
@@ -18,7 +18,7 @@
         </tr>
       </table>
       <div class="form-actions">
-        <button type="submit" class="btn btn-primary">Save Changes</button>
+        <button type="submit" class="btn btn-success">Save Changes</button>
         <button type="button" class="btn btn-danger" onclick="closeRoleEditModal()">
           Cancel
         </button>
