--- a/app/templates/tools.html
+++ b/app/templates/tools.html
@@ -99,7 +99,7 @@
     <div id="roster-content" class="tools-tab-content">
         <div class="roster-container">
             <!-- Header matching Lucky Draw style -->
-            <h1 class="page-title" style="margin-bottom: 10px;"><i class="fas fa-clipboard-list"></i> Meeting Roster</h1>
+            <h1 class="page-title"><i class="fas fa-clipboard-list"></i> Meeting Roster</h1>
             
             {{ render_meeting_filter(all_meetings, selected_meeting_num, label='', data_format='object',
                 select_id='roster-meeting-filter', extra_style="margin-bottom: 5px;") }}
